# seqterm

./: .gitignore  01_editorUpdate2.md  02_songUpdate.md  ARCHITECTURE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Cross.toml  README.md  RELEASE_PROCESS.md  TODO.md  cliff.toml  viewsSeqTermMockups.txt
.github/workflows/: release.yml
Formula/: seqterm.rb
crates/seqterm-app/: Cargo.toml
crates/seqterm-app/src/: main.rs
crates/seqterm-application/: Cargo.toml
crates/seqterm-application/src/: bus.rs  commands.rs  events.rs  instrument_adapter.rs  lib.rs  plugin_registry.rs  use_cases.rs
crates/seqterm-audio-engine/: Cargo.toml
crates/seqterm-audio-engine/src/: assets.rs  audio_clip.rs  built_synth.rs  cpal_backend.rs  engine.rs  events.rs  fx_chain.rs  lib.rs  lufs.rs  mixer.rs  offline.rs  sf2_loader.rs  sf2_sampler.rs  sf2_synth.rs  skip_back.rs  spectrum.rs  time_stretch.rs  waveform_cache.rs
crates/seqterm-audio-engine/src/fx/: bitcrusher.rs  cassette.rs  chorus.rs  compressor.rs  delay.rs  expander.rs  filter.rs  filterbank.rs  flanger.rs  gate.rs  gran_delay.rs  isolator.rs  looper.rs  mod.rs  pan.rs  parametric_eq.rs  phaser.rs  protocosmos.rs  reverb.rs  reverse.rs  s4_texture.rs  sidechain.rs  space_echo.rs  utility.rs  vinyl.rs  widener.rs  z5_texture.rs
crates/seqterm-audio-engine/src/granular/: engine.rs  envelopes.rs  grain.rs  mod.rs
crates/seqterm-audio-export/: Cargo.toml
crates/seqterm-audio-export/src/: lib.rs  mp3.rs  wav.rs
crates/seqterm-cloud/: Cargo.toml
crates/seqterm-cloud/src/: lib.rs
crates/seqterm-collab/: Cargo.toml
crates/seqterm-collab/src/: crdt.rs  lib.rs  merge.rs  session.rs
crates/seqterm-command/: Cargo.toml
crates/seqterm-command/src/: lib.rs
crates/seqterm-core/: Cargo.toml
crates/seqterm-core/src/: arrangement.rs  automation.rs  channel.rs  edit.rs  granular.rs  lib.rs  modulation.rs  mpe.rs  note.rs  pad.rs  pattern.rs  preset.rs  project.rs  rational.rs  sf2_instrument.rs
crates/seqterm-engine/: Cargo.toml
crates/seqterm-engine/src/: events.rs  lib.rs  scheduler.rs  transport.rs
crates/seqterm-engine/tests/: scheduler_test.rs
crates/seqterm-ffi/: Cargo.toml  seqterm.h
crates/seqterm-ffi/src/: lib.rs
crates/seqterm-fluidsynth/: Cargo.toml  build.rs
crates/seqterm-fluidsynth/src/: engine_ffi.rs  engine_lite.rs  engine_stub.rs  ffi.rs  lib.rs
crates/seqterm-generative/: Cargo.toml
crates/seqterm-generative/src/: euclidean.rs  lib.rs  markov.rs
crates/seqterm-history/: Cargo.toml
crates/seqterm-history/src/: lib.rs  serial.rs
crates/seqterm-lua/: Cargo.toml
crates/seqterm-lua/src/: lib.rs
crates/seqterm-midi/: Cargo.toml
crates/seqterm-midi-io/: Cargo.toml
crates/seqterm-midi-io/src/: lib.rs  osc.rs
crates/seqterm-midi/src/: input_bus.rs  lib.rs  midi2.rs  midir_adapter.rs  router.rs
crates/seqterm-persistence/: Cargo.toml
crates/seqterm-persistence/src/: lib.rs
crates/seqterm-plugin-au/: Cargo.toml
crates/seqterm-plugin-au/src/: lib.rs
crates/seqterm-plugin-clap/: Cargo.toml
crates/seqterm-plugin-clap/examples/: clap_validate.rs
crates/seqterm-plugin-clap/src/: clap_host.rs  lib.rs
crates/seqterm-plugin-clap/tests/: clap_runtime.rs
crates/seqterm-plugin-lv2/: Cargo.toml
crates/seqterm-plugin-lv2/src/: discovery.rs  lib.rs  lv2_abi.rs  ttl.rs
crates/seqterm-plugin-lv2/tests/: host_real.rs
crates/seqterm-plugin-sandbox/: Cargo.toml
crates/seqterm-plugin-sandbox/src/: lib.rs
crates/seqterm-plugin-scan/: Cargo.toml
crates/seqterm-plugin-scan/src/: lib.rs
crates/seqterm-plugin-vst2/: Cargo.toml
crates/seqterm-plugin-vst2/src/: lib.rs  vst2_abi.rs
crates/seqterm-plugin-vst3/: Cargo.toml
crates/seqterm-plugin-vst3/src/: lib.rs
crates/seqterm-ports/: Cargo.toml
crates/seqterm-ports/src/: audio.rs  export.rs  instrument.rs  lib.rs  midi.rs  persistence.rs  plugin.rs  realtime.rs  sf2_params.rs
crates/seqterm-routing/: Cargo.toml
crates/seqterm-routing/src/: lib.rs
crates/seqterm-sdk/: Cargo.toml
crates/seqterm-sdk/src/: lib.rs
crates/seqterm-settings/: Cargo.toml
crates/seqterm-settings/src/: lib.rs
crates/seqterm-sfz/: Cargo.toml
crates/seqterm-sfz/src/: backend.rs  lib.rs  parser.rs
crates/seqterm-stz/: Cargo.toml
crates/seqterm-stz-cli/: Cargo.toml
crates/seqterm-stz-cli/src/: main.rs
crates/seqterm-stz/src/: bridge.rs  domain.rs  error.rs  lib.rs  migration.rs  ports.rs  registry.rs  stz.rs  validation.rs
crates/seqterm-stz/tests/: arrangement_roundtrip.rs
crates/seqterm-ui/: Cargo.toml
crates/seqterm-ui/src/: app.rs  error.rs  fx_modulation.rs  i18n.rs  lib.rs  menu.rs  modal.rs  testkit.rs
crates/seqterm-ui/src/views/: about.rs  arranger.rs  config.rs  granular.rs  help.rs  matrix.rs  mixer.rs  mod.rs  routing.rs  sampler.rs  splash.rs  tracker.rs
crates/seqterm-ui/src/widgets/: mod.rs  modal_render.rs  piano_roll.rs  transport.rs
crates/seqterm-ui/tests/: arrangement_workflow.rs  matrix_curves.rs  mixer_fx.rs  piano_rational.rs  piano_workflow.rs
crates/seqterm-wasm/: Cargo.toml
crates/seqterm-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  RELEASING.md  arm-compatibility.md  cross-compilation.md  design-principles.md  fluidsynth-evaluation.md  platform-optimizations.md  raspberry-pi-benchmarks.md  raspberry-pi.md  rational-storage.md
docs/architecture/: ARCHITECTURE.md  arranger.md  audio-engine.md  midi.md  mixer.md  plugin-hosting.md  scheduler.md  sf2-engine.md
docs/audio/: protocosmos.md  space-echo.md
docs/guide/: arrangement-editor.md
docs/roadmap/: README.md  ROADMAP.md  STATUS.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
packaging/aur/: PKGBUILD
pkg/: PKGBUILD  seqterm.rb
pkg/aur/: PKGBUILD
pkg/homebrew/: seqterm.rb
projects/: demo.autosave.json  demo.json
themes/: dark.toml
