[package]
name = "seqterm-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "seqterm"
path = "src/main.rs"

[features]
default = []
# FluidSynth-family SF2 engine. Default = embedded FluidLite (no external deps).
fluidsynth        = ["seqterm-audio-engine/fluidsynth"]
# Opt-in: full system libfluidsynth 2.x (requires libfluidsynth installed).
fluidsynth-system = ["seqterm-audio-engine/fluidsynth-system"]
# Enable VST3 plugin hosting — registers the VST3 host adapter in the registry.
vst3       = ["seqterm-audio-engine/vst3", "seqterm-ui/vst3"]
# Enable CLAP plugin hosting — registers the CLAP host adapter in the registry.
clap-host  = ["seqterm-audio-engine/clap-host", "seqterm-ui/clap-host"]

[dependencies]
seqterm-core         = { path = "../seqterm-core" }
seqterm-audio-engine = { path = "../seqterm-audio-engine", features = ["jack-backend"] }
seqterm-engine       = { path = "../seqterm-engine" }
seqterm-midi         = { path = "../seqterm-midi" }
seqterm-persistence  = { path = "../seqterm-persistence" }
seqterm-ports        = { path = "../seqterm-ports" }
seqterm-ui           = { path = "../seqterm-ui" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
parking_lot = { workspace = true }
