[package]
name = "seqterm-app"
version = "1.0.0"
edition = "2024"
# `authors` is required by cargo-wix (it becomes the MSI Manufacturer); without it
# the Windows .msi packaging step fails with "No 'authors' field found".
authors = ["Jorge Codelia <jorgecodelia@gmail.com>"]
description = "Terminal-based modular music sequencer, sampler, and granular synthesizer"
license = "MIT"
homepage = "https://github.com/jacodelia/seqterm"
repository = "https://github.com/jacodelia/seqterm"

[[bin]]
name = "seqterm"
path = "src/main.rs"

[features]
# CLAP hosting is on by default so CLAP plugins are discovered out of the box.
default = ["clap-host"]
# FluidSynth-family SF2 engine. Default = embedded FluidLite (no external deps).
fluidsynth        = ["seqterm-audio-engine/fluidsynth"]
# Opt-in: full system libfluidsynth 2.x (requires libfluidsynth installed).
fluidsynth-system = ["seqterm-audio-engine/fluidsynth-system"]
# Enable VST3 plugin hosting — registers the VST3 host adapter in the registry.
vst3       = ["seqterm-audio-engine/vst3", "seqterm-ui/vst3"]
# Enable CLAP plugin hosting — registers the CLAP host adapter in the registry.
clap-host  = ["seqterm-audio-engine/clap-host", "seqterm-ui/clap-host"]

[dependencies]
seqterm-core         = { path = "../seqterm-core" }
# Base audio backend = CPAL (WASAPI/CoreAudio/ALSA) — builds with no extra native
# libs, so Windows/macOS/cross-ARM release jobs compile. JACK (which links
# `libjack`) is added only for the x86_64 Linux build below.
seqterm-audio-engine = { path = "../seqterm-audio-engine" }
seqterm-engine       = { path = "../seqterm-engine" }
seqterm-midi         = { path = "../seqterm-midi" }
seqterm-persistence  = { path = "../seqterm-persistence" }
seqterm-ports        = { path = "../seqterm-ports" }
seqterm-ui           = { path = "../seqterm-ui" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Redirect process stdout/stderr (fd 1/2) to the log so plugin C-library output
# during scanning never corrupts the TUI (which draws to /dev/tty instead).
libc = "0.2"

# JACK / PipeWire-JACK output is enabled only on x86_64 Linux — the one target
# where `libjack` is reliably available at build time (the release CI installs
# `libjack-jackd2-dev` there). Windows, macOS and cross-compiled ARM Linux use the
# CPAL default backend instead, so they don't need `libjack`.
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
seqterm-audio-engine = { path = "../seqterm-audio-engine", features = ["jack-backend"] }

# ── Packaging metadata (consumed by the release CI workflow) ──────────────────
# cargo-deb → .deb (Debian/Ubuntu/Raspberry Pi OS)
[package.metadata.deb]
name = "seqterm"
maintainer = "Jorge Codelia <jorgecodelia@gmail.com>"
copyright = "2026, SeqTerm Contributors"
license-file = ["../../LICENSE", "0"]
extended-description = "A terminal-based modular step sequencer, sampler, and granular synthesizer that runs entirely in the terminal."
section = "sound"
priority = "optional"
depends = "libasound2"
assets = [
    ["target/release/seqterm", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/seqterm/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/seqterm/LICENSE", "644"],
]

# cargo-generate-rpm → .rpm (Fedora/openSUSE)
[package.metadata.generate-rpm]
name = "seqterm"
license = "MIT"
summary = "Terminal-based modular music sequencer, sampler, and granular synthesizer"
assets = [
    { source = "target/release/seqterm", dest = "/usr/bin/seqterm", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/seqterm/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/seqterm/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
alsa-lib = "*"
