[package]
name = "seqterm-application"
version = "0.1.0"
edition = "2024"

# Application layer: use-cases, command/event buses, orchestration.
# Depends on domain + ports only. NO UI, NO audio I/O, NO filesystem.

[dependencies]
seqterm-core  = { path = "../seqterm-core" }
seqterm-ports = { path = "../seqterm-ports" }

# Plugin host adapters — optional, pulled in by the matching feature so the
# default build stays lean. Each adapter implements `PluginHostPort`.
seqterm-plugin-vst2 = { path = "../seqterm-plugin-vst2", optional = true }
seqterm-plugin-vst3 = { path = "../seqterm-plugin-vst3", optional = true }
seqterm-plugin-clap = { path = "../seqterm-plugin-clap", optional = true }
# Filesystem discovery for LADSPA/DSSI/SFZ/SF2/JSFX — pure Rust, always on.
seqterm-plugin-scan = { path = "../seqterm-plugin-scan" }
# Real LV2 host (TTL parse + libloading, pure Rust, always on).
seqterm-plugin-lv2  = { path = "../seqterm-plugin-lv2" }

flume       = { workspace = true }
parking_lot = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }

[features]
default   = ["vst2"]
# Register the VST2 host adapter (fully functional via libloading).
vst2      = ["dep:seqterm-plugin-vst2"]
# Register the VST3 host adapter (scanning functional; processing needs VST3 SDK).
vst3      = ["dep:seqterm-plugin-vst3"]
# Register the CLAP host adapter (scanning functional; processing needs clack-host).
clap-host = ["dep:seqterm-plugin-clap"]
