[package]
name = "seqterm-audio-engine"
version = "0.1.0"
edition = "2024"

# ─── Features ─────────────────────────────────────────────────────────────────
[features]
default = ["cpal-backend"]
# CPAL cross-platform audio output (default)
cpal-backend = ["dep:cpal"]
# JACK / PipeWire audio output (Linux/macOS)
jack-backend  = ["dep:cpal", "cpal/jack", "dep:jack"]

[dependencies]
seqterm-core  = { path = "../seqterm-core" }
seqterm-ports = { path = "../seqterm-ports" }

# ── Audio output ──────────────────────────────────────────────────────────────
cpal     = { workspace = true, optional = true }
# JACK API for port auto-connection (used with jack-backend feature)
jack     = { version = "0.11", optional = true }

# ── SF2 synthesis (pure Rust) ─────────────────────────────────────────────────
oxisynth  = "0.1.0"
soundfont = "0.0.1"

# ── Audio decoding ────────────────────────────────────────────────────────────
hound     = { workspace = true }
symphonia = { workspace = true }

# ── Resampling ────────────────────────────────────────────────────────────────
rubato = { workspace = true }

# ── Lock-free ring buffer (realtime boundary) ─────────────────────────────────
rtrb = { workspace = true }

# ── Utilities ─────────────────────────────────────────────────────────────────
parking_lot = { workspace = true }
flume       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
