[package]
name = "seqterm-audio-engine"
version = "1.0.0"
edition = "2024"

# ─── Features ─────────────────────────────────────────────────────────────────
[features]
# Embedded FluidLite (zero-dep, statically compiled) is on by default so SF2
# playback uses the robust FluidSynth core rather than the limited oxisynth
# fallback. wasm builds should opt out via --no-default-features.
default = ["cpal-backend", "fluidsynth"]
# CPAL cross-platform audio output (default)
cpal-backend = ["dep:cpal"]
# JACK / PipeWire audio output (Linux/macOS)
jack-backend  = ["dep:cpal", "cpal/jack", "dep:jack"]
# FluidSynth-family SF2 engine. Default = embedded FluidLite: statically compiled
# into the binary, NO external dependencies (Linux/macOS/Windows/RPi).
fluidsynth        = ["seqterm-fluidsynth/fluidlite"]
# Opt-in: full system libfluidsynth 2.x (dynamic link; requires libfluidsynth).
fluidsynth-system = ["seqterm-fluidsynth/fluidsynth"]
# VST3 plugin hosting (future; activates seqterm-plugin-vst3 when available)
vst3          = []
# CLAP plugin hosting (future; activates seqterm-plugin-clap when available)
clap-host     = []
# WebAssembly build target (disables CPAL, uses Web Audio API)
wasm          = []

[dependencies]
seqterm-core  = { path = "../seqterm-core" }
seqterm-ports = { path = "../seqterm-ports" }
# FluidSynth SF2 engine. Always linked as a (silent) stub; the `fluidsynth`
# feature turns on the real libfluidsynth binding.
seqterm-fluidsynth = { path = "../seqterm-fluidsynth" }

# ── Audio output ──────────────────────────────────────────────────────────────
cpal     = { workspace = true, optional = true }
# JACK API for port auto-connection (used with jack-backend feature)
jack     = { version = "0.11", optional = true }

# ── SF2 synthesis (pure Rust) ─────────────────────────────────────────────────
oxisynth  = "0.1.0"
soundfont = "0.0.1"

# ── Audio decoding ────────────────────────────────────────────────────────────
hound     = { workspace = true }
symphonia = { workspace = true }

# ── Resampling ────────────────────────────────────────────────────────────────
rubato = { workspace = true }

# ── Spectrum analysis (FFT) ───────────────────────────────────────────────────
rustfft = { workspace = true }

# ── Lock-free ring buffer (realtime boundary) ─────────────────────────────────
rtrb = { workspace = true }

# ── Utilities ─────────────────────────────────────────────────────────────────
parking_lot = { workspace = true }
flume       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
