[package]
name    = "seqterm-cloud"
version = "0.1.0"
edition = "2021"
description = "Cloud sync adapter for SeqTerm — pluggable backend for project backup and sync."

[features]
default = []
# HTTP-based sync via REST API (requires tokio).
http = ["dep:tokio", "dep:reqwest"]

[dependencies]
seqterm-core = { path = "../seqterm-core" }
seqterm-stz  = { path = "../seqterm-stz" }

anyhow   = "1"
tracing  = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
uuid     = { version = "1", features = ["v4", "serde"] }
chrono   = { version = "0.4", features = ["serde"] }

tokio   = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
