[package]
name = "seqterm-engine"
version = "1.0.0"
edition = "2024"

[dependencies]
seqterm-core = { path = "../seqterm-core" }
seqterm-generative = { path = "../seqterm-generative" }
flume = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
triple_buffer = { workspace = true }
