[package]
name = "seqterm-persistence"
version = "1.0.0"
edition = "2024"

[dependencies]
seqterm-core     = { path = "../seqterm-core" }
seqterm-ports    = { path = "../seqterm-ports" }
seqterm-settings = { path = "../seqterm-settings" }
seqterm-stz      = { path = "../seqterm-stz" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
flume = { workspace = true }
toml = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
