[package]
name    = "seqterm-plugin-clap"
version = "0.1.0"
edition = "2021"
description = "CLAP plugin hosting for SeqTerm (real hosting via clack-host behind the 'clap' feature)."

[features]
default = []
# Enable real CLAP hosting (discovery + audio) via the safe `clack-host` crate.
clap = ["dep:clack-host", "dep:clack-extensions"]

[dependencies]
seqterm-ports = { path = "../seqterm-ports" }
anyhow  = "1"
tracing = { workspace = true }
clack-host = { version = "0.1.0", optional = true }
clack-extensions = { version = "0.1.0", optional = true, features = ["state", "clack-host"] }
