[package]
name = "seqterm-sdk"
version = "1.0.0"
edition = "2024"
description = "SeqTerm public API — stable interface for external tooling and scripting"
documentation = "https://docs.rs/seqterm-sdk"
readme = "../../README.md"
keywords = ["music", "sequencer", "midi", "audio", "daw"]
categories = ["multimedia::audio", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
seqterm-core  = { path = "../seqterm-core" }
seqterm-ports = { path = "../seqterm-ports" }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
