[package]
name = "seqterm-ui"
version = "1.0.0"
edition = "2024"

[features]
default = []
# Forward plugin-host adapter selection down to seqterm-application.
vst3      = ["seqterm-application/vst3"]
clap-host = ["seqterm-application/clap-host"]

[dependencies]
seqterm-core         = { path = "../seqterm-core" }
seqterm-application  = { path = "../seqterm-application" }
seqterm-history      = { path = "../seqterm-history" }
seqterm-command      = { path = "../seqterm-command" }
seqterm-audio-export = { path = "../seqterm-audio-export" }
seqterm-audio-engine = { path = "../seqterm-audio-engine", features = ["jack-backend"] }
seqterm-ports        = { path = "../seqterm-ports" }
seqterm-engine       = { path = "../seqterm-engine" }
seqterm-generative   = { path = "../seqterm-generative" }
seqterm-midi         = { path = "../seqterm-midi" }
seqterm-midi-io      = { path = "../seqterm-midi-io" }
seqterm-persistence  = { path = "../seqterm-persistence" }
seqterm-stz          = { path = "../seqterm-stz" }
seqterm-lua          = { path = "../seqterm-lua", default-features = false }
ratatui      = { workspace = true }
crossterm    = { workspace = true }
parking_lot  = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
flume        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
triple_buffer = { workspace = true }
fuzzy-matcher = { workspace = true }
hound        = { workspace = true }

# Used to redirect plugin-init stdout/stderr into the log during scans so noisy
# libraries don't corrupt the TUI (see `scan_guard` in lib.rs).
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
